# brushless_lamp

./: .gitignore  MORNING_STATUS.md  PHASE13-PRODUCTION-CATALOG.md  PHASE15-S3-MIGRATION.md  README.md
PCB/: 01-architecture-and-pinmap.md  02-schematic-blocks.md  03-bom-mainboard.csv  03-bom-sensor.csv  04-fusion-workflow-and-manufacturing.md  05-build-plan-checklist.md  06-bom-assembly.csv  06-pcbway-assembly.md  PCBWay-BOM.xlsx  PCBWay-CPL.csv  PCBWay.dru  README.md
PCB/components/: AO3400A.lbr  DRV8313PWPR.lbr  ESP32-S3-WROOM-1-N8R8.lbr  JST-XH-BL.lbr  KF350-2p.step  KF350-3p.step  KF350-SENSOR.lbr  TS-1187A.lbr  TYPE-C-31-M-12.lbr  USBLC6-2SC6.lbr
PCB/fusion/: BrushlessLamp.sch  BrushlessLampRoutes.brd  BrushlessLampRoutes.sch  FOOTPRINTS.md  README.md  generate_brd.py  generate_sch.py  inject_slots.py  verify_mask_edit.py
arduino/BrushlessLamp/: BrushlessLamp.ino
esp-idf/: .gitignore  CMakeLists.txt  README.md  connectedhomeip-pr42320.patch  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.motor_only
esp-idf/components/SimpleFOC/: CMakeLists.txt
esp-idf/components/espressif__arduino-foc/src/: BLDCMotor.cpp
esp-idf/components/espressif__arduino-foc/src/common/base_classes/: Sensor.cpp
esp-idf/components/espressif__esp_simplefoc/: .component_hash  CHECKSUMS.json  idf_component.yml
esp-idf/components/espressif__esp_simplefoc/port/esp/: esp_hal_bldc_3pwm.cpp
esp-idf/components/espressif__esp_simplefoc/port/esp/include/: esp_hal_bldc_3pwm.h
esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.cpp  app_driver.h  app_main.cpp  config.h  idf_component.yml  input.cpp  input.h  leds.cpp  leds.h  main.cpp  matter_app.cpp  matter_app.h  motor.cpp  motor.h  persistence.cpp  persistence.h  pins.h
esp-idf/production/: .gitignore  README.md
s3/: .gitignore  README.md  sdkconfig.defaults.common
s3/archive/: README.md
s3/archive/diagnostic/test/main/: CMakeLists.txt  main.cpp
s3/archive/diagnostic/test_ble/: CMakeLists.txt  sdkconfig.defaults.esp32s3
s3/archive/diagnostic/test_ble/main/: main.c
s3/archive/diagnostic/test_ble_arduino/: sdkconfig.defaults.esp32s3
s3/archive/diagnostic/test_ble_arduino/main/: idf_component.yml  main.cpp
s3/archive/diagnostic/test_ble_arduino_async/: CMakeLists.txt  sdkconfig.defaults.esp32s3
s3/archive/diagnostic/test_ble_arduino_async/main/: CMakeLists.txt  main.cpp
s3/archive/milestones/m1-motor/: CMakeLists.txt  sdkconfig.defaults.esp32s3
s3/archive/milestones/m1-motor/main/: idf_component.yml  main.cpp
s3/archive/milestones/m2-knob/main/: main.cpp
s3/archive/milestones/m3-leds/: CMakeLists.txt
s3/archive/milestones/m3-leds/main/: CMakeLists.txt  leds.h  main.cpp
s3/archive/milestones/supermini_m4/: partitions.csv  sdkconfig.defaults.esp32s3
s3/archive/milestones/supermini_m4/main/: input.cpp  leds.cpp  matter_app.cpp
s3/common/: CMakeLists.txt  config.h  motor.cpp  motor.h  pins.h
s3/components/SimpleFOC/: CMakeLists.txt
s3/firmware/: CMakeLists.txt  partitions.csv  release.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s3
s3/firmware/.cache/clangd/index/: Arduino.h.396C30843890C2F4.idx  BLE2901.cpp.454A048428189F9C.idx  BLE2901.h.437612B4CC40F3B6.idx  BLE2902.cpp.9EB6EB2508543085.idx  BLE2902.h.D30418E535DB9489.idx  BLE2904.cpp.8005BA403B9F188E.idx  BLE2904.h.7247C1536BB4749C.idx  BLEAddress.cpp.D8EE47E723572BD6.idx  BLEAddress.h.FE7BDDB54EB73567.idx  BLEAdvertisedDevice.cpp.98F833A1D3B1C168.idx  BLEAdvertisedDevice.h.A7C6AD04C74F3BC8.idx  BLEAdvertising.cpp.7827C18D8A41472B.idx  BLEAdvertising.h.EE248BBFC7B89346.idx  BLEBeacon.cpp.61BA011149C60896.idx  BLEBeacon.h.50EE145D6C01796E.idx  BLECharacteristic.cpp.97FF8A27FA459E34.idx  BLECharacteristic.h.C65CBC6EF501DEAC.idx  BLECharacteristicMap.cpp.C56548F43C5D2D8D.idx  BLEClient.cpp.64837CEEF2822CAA.idx  BLEClient.h.04C98FDBB8E10C09.idx  BLEConnInfo.h.F1ECA42A4277A785.idx  BLEDescriptor.cpp.AFE2E5D37745F0D9.idx  BLEDescriptor.h.DA884C6E1DBA327D.idx  BLEDescriptorMap.cpp.79C870CBFD2E75C9.idx  BLEDevice.cpp.2A8B6D090CCE641E.idx  BLEDevice.h.4953F8B8190EA23C.idx  BLEEddystoneTLM.cpp.3E12ED0DF0D5EA58.idx  BLEEddystoneTLM.h.ACA9010E86090929.idx  BLEEddystoneURL.cpp.DC07C4C95B6ABFBB.idx  BLEEddystoneURL.h.7833D2FE0D90CE58.idx  BLEExceptions.cpp.E733C03A1FBE9D50.idx  BLEHIDDevice.cpp.1287181E224DC5B6.idx  BLEHIDDevice.h.20FFA7F25596203D.idx  BLERemoteCharacteristic.cpp.B3ACCE3097A235BD.idx  BLERemoteCharacteristic.h.0F2CA9EAE42F5D04.idx  BLERemoteDescriptor.cpp.04EB9FAD7FA66098.idx  BLERemoteDescriptor.h.02300549860EDD5A.idx  BLERemoteService.cpp.43CA2932BE697A8C.idx  BLERemoteService.h.1FEB0B5922D51F97.idx  BLEScan.cpp.5340A3C95D939A26.idx  (+1059 more)
s3/firmware/main/: CMakeLists.txt  idf_component.yml  input.cpp  input.h  leds.cpp  leds.h  main.cpp  matter_app.cpp  matter_app.h  ota.cpp  ota.h  status_led.cpp  status_led.h
s3/m1-motor/: sdkconfig.defaults.esp32s3
s3/m1-motor/main/: CMakeLists.txt  main.cpp
s3/m2-knob/: CMakeLists.txt  sdkconfig.defaults.esp32s3
s3/m2-knob/main/: CMakeLists.txt  idf_component.yml  input.cpp  input.h  main.cpp
s3/m3-leds/: sdkconfig.defaults.esp32s3
s3/m3-leds/main/: CMakeLists.txt  input.cpp  input.h  leds.cpp  leds.h  main.cpp
s3/m4-matter/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
s3/m4-matter/main/: CMakeLists.txt  idf_component.yml  input.cpp  input.h  leds.cpp  leds.h  main.cpp  matter_app.cpp  matter_app.h
s3/supermini_m4/: CMakeLists.txt  sdkconfig.defaults
s3/supermini_m4/main/: idf_component.yml  input.h  leds.h  main.cpp
s3/test/: CMakeLists.txt  sdkconfig.defaults.esp32s3
s3/test_ble/: sdkconfig.defaults.esp32s3
s3/test_ble/main/: CMakeLists.txt  main.c
s3/test_ble_arduino/: CMakeLists.txt
s3/test_ble_arduino/main/: main.cpp
